--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <div class="col-4">
             <img
               class="currentTemperatureEmoji"
+              id="weather-icon"
               src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
               alt=""
             />
