Fixed default city

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="row">
-          <div class="col-4">
+          <div class="col-5">
             <img
               class="currentTemperatureEmoji"
               id="weather-icon"
@@ -58,18 +58,20 @@
             </span>
           </div>
           <div class="col-3 currentConditionList">
-            <ul>
-              <li id="precipitation">Precipitation: 15%</li>
+            <ul>            
               <li id="humidity">Humidity: 49%</li>
               <li id="wind">Wind: 10 mph</li>
             </ul>
           </div>
-          <div class="col-5 currentCity">
-            <div class="cityChoice" id="city-choice">Columbus, GA</div>
-            <div class="day-time" id="day-time"></div>
-            <div class="currentCondition" id="description">Partly cloudy</div>
+          <div class="col-4 currentCity">
+            <div class="cityChoice" id="city-choice"></div>
+            <div class="day-time" id="day-time">Last updated</div>
+            <div class="currentCondition" id="description"></div>
           </div>
         </div>
+
+
+
 
         <div class="row tabs">
           <div class="col-2 temperature-tab">Temperature</div>
