--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="row">
-          <div class="col-5">
+          <div class="col-4 section-one">
             <img
               class="currentTemperatureEmoji"
               id="weather-icon"
@@ -51,11 +51,9 @@
               alt=""
             />
             <span class="currentTemperature" id="current-temperature">34</span>
-            <a href="#" class="celciusSymbol" id="celcius-conversion">°C | </a>
+            <a href="#" class="conversion" id="celcius-conversion">°C | </a>
 
-            <a href="#" class="fahrenheitSymbol" id="fahrenheit-conversion"
-              >°F</a
-            >
+            <a href="#" class="conversion" id="fahrenheit-conversion">°F</a>
           </div>
           <div class="col-3 currentConditionList">
             <ul>
@@ -63,7 +61,7 @@
               <li id="wind">Wind: 10 mph</li>
             </ul>
           </div>
-          <div class="col-4 currentCity">
+          <div class="col-5 currentCity">
             <div class="cityChoice" id="city-choice"></div>
             <div class="day-time" id="day-time">Last updated</div>
             <div class="currentCondition" id="description"></div>
