Updated forecast dates

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
           </div>
         </div>
 
-        <div class="row days">
+        <div class="row forecast">
           <div class="col">
-            Monday
+            <span id="next-day-1">Monday</span>
             <div>
               <img
                 src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
@@ -80,7 +80,7 @@
             <span class="high">34°</span> <span class="low">10°</span>
           </div>
           <div class="col">
-            Monday
+            <span id="next-day-2">Monday</span>
             <div>
               <img
                 src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
@@ -90,7 +90,7 @@
             <span class="high">34°</span> <span class="low">10°</span>
           </div>
           <div class="col">
-            Monday
+            <span id="next-day-3">Monday</span>
             <div>
               <img
                 src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
@@ -100,7 +100,7 @@
             <span class="high">34°</span> <span class="low">10°</span>
           </div>
           <div class="col">
-            Monday
+            <span id="next-day-4">Monday</span>
             <div>
               <img
                 src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
@@ -110,7 +110,7 @@
             <span class="high">34°</span> <span class="low">10°</span>
           </div>
           <div class="col">
-            Monday
+            <span id="next-day-5">Monday</span>
             <div>
               <img
                 src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
