Shows next 7 days

--- a/index.html
+++ b/index.html
@@ -119,6 +119,26 @@
             </div>
             <span class="high">34°</span> <span class="low">10°</span>
           </div>
+          <div class="col">
+            <span id="next-day-6">Monday</span>
+            <div>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+                alt=""
+              />
+            </div>
+            <span class="high">34°</span> <span class="low">10°</span>
+          </div>
+          <div class="col">
+            <span id="next-day-7">Monday</span>
+            <div>
+              <img
+                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+                alt=""
+              />
+            </div>
+            <span class="high">34°</span> <span class="low">10°</span>
+          </div>
         </div>
       </div>
     </div>
