Changed html of forecast and injected into JS

--- a/index.html
+++ b/index.html
@@ -68,76 +68,18 @@
           </div>
         </div>
 
-        <div class="row forecast">
-          <div class="col">
-            <span id="next-day-1">Monday</span>
-            <div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt=""
-              />
+        <div class="weather-forecast" id="forecast">
+          <div class="row forecast">
+            <div class="col">
+              <div id="next-day">Monday</div>
+              <div>
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
+                  alt=""
+                />
+              </div>
+              <span class="high">34°</span> <span class="low">10°</span>
             </div>
-            <span class="high">34°</span> <span class="low">10°</span>
-          </div>
-          <div class="col">
-            <span id="next-day-2">Monday</span>
-            <div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt=""
-              />
-            </div>
-            <span class="high">34°</span> <span class="low">10°</span>
-          </div>
-          <div class="col">
-            <span id="next-day-3">Monday</span>
-            <div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
-                alt=""
-              />
-            </div>
-            <span class="high">34°</span> <span class="low">10°</span>
-          </div>
-          <div class="col">
-            <span id="next-day-4">Monday</span>
-            <div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png"
-                alt=""
-              />
-            </div>
-            <span class="high">34°</span> <span class="low">10°</span>
-          </div>
-          <div class="col">
-            <span id="next-day-5">Monday</span>
-            <div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt=""
-              />
-            </div>
-            <span class="high">34°</span> <span class="low">10°</span>
-          </div>
-          <div class="col">
-            <span id="next-day-6">Monday</span>
-            <div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt=""
-              />
-            </div>
-            <span class="high">34°</span> <span class="low">10°</span>
-          </div>
-          <div class="col">
-            <span id="next-day-7">Monday</span>
-            <div>
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt=""
-              />
-            </div>
-            <span class="high">34°</span> <span class="low">10°</span>
           </div>
         </div>
       </div>
