Updated days of week

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
                   alt=""
+                  id="next-day-icon"
                 />
               </div>
-              <span class="high">34°</span> <span class="low">10°</span>
+              <span class="high" id="highTemp">34°</span>
+              <span class="low" id="lowTemp">10°</span>
             </div>
           </div>
         </div>
